--- a/src/assets/css/router.css
+++ b/src/assets/css/router.css
@@ -1,7 +1,8 @@
 .router-style {
     display: inline-block;
-    width: 100px;
+    padding: 0 20px;
     height: 50px;
-    background-color: lightcoral;
+    background-color: rgb(248, 78, 78);
     line-height: 50px;
+    color: whitesmoke !important;
 }
