add: new some api some page

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -34,3 +34,9 @@ a {
 li {
     list-style: none;
 }
+
+/* 解决打开拟态框,关闭拟态框的抖动问题。 */
+body {
+    overflow-y: auto !important;
+    padding-right: 0 !important;
+}
