--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -16,10 +16,61 @@
     align-items: center;
 }
 
+.flex-acenter {
+    display: flex;
+    align-items: center;
+}
+
+.flex-jcenter {
+    display: flex;
+    justify-content: center;
+}
+
+
 .flex-start {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex-shrink {
+    flex-shrink: 0;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.flex-grow-2 {
+    flex-grow: 2;
+}
+
+.flex-grow-3 {
+    flex-grow: 3;
+}
+
+.flex-grow-4 {
+    flex-grow: 4;
+}
+
+.flex-wrap {
+    flex-wrap: nowrap;
 }
 
 * {
@@ -39,4 +90,10 @@ li {
 body {
     overflow-y: auto !important;
     padding-right: 0 !important;
+}
+
+.text-hidden {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
