opt: boutique song sheet request

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -97,3 +97,17 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/* ::-webkit-scrollbar 滚动条整体部分，可以设置宽度啥的
+
+::-webkit-scrollbar-button 滚动条两端的按钮
+
+::-webkit-scrollbar-track 外层轨道
+
+::-webkit-scrollbar-track-piece 内层轨道，滚动条中间部分(除去)
+
+::-webkit-scrollbar-thumb 滚动条里面可以拖动的那个
+
+::-webkit-scrollbar-corner 边角
+
+::-webkit-resizer 定义右下角拖动块的样式 */
