--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: "iconfont";
     /* Project id 3613962 */
-    src: url('//at.alicdn.com/t/c/font_3613962_1sz4dhbzyd9.woff2?t=1667030037596') format('woff2'),
-        url('//at.alicdn.com/t/c/font_3613962_1sz4dhbzyd9.woff?t=1667030037596') format('woff'),
-        url('//at.alicdn.com/t/c/font_3613962_1sz4dhbzyd9.ttf?t=1667030037596') format('truetype');
+    src: url('//at.alicdn.com/t/c/font_3613962_n8zd3t2zgv.woff2?t=1678517317003') format('woff2'),
+        url('//at.alicdn.com/t/c/font_3613962_n8zd3t2zgv.woff?t=1678517317003') format('woff'),
+        url('//at.alicdn.com/t/c/font_3613962_n8zd3t2zgv.ttf?t=1678517317003') format('truetype');
 }
 
 .iconfont {
@@ -12,6 +12,14 @@
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xinxi:before {
+    content: "\e630";
+}
+
+.icon-MV:before {
+    content: "\e62f";
 }
 
 .icon-huangguan1:before {
