--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,9 +1,9 @@
 @import './animation.scss';
 $width: 1240px;
-$color:rgb(254, 236, 239);
-$margin_I: 25px 0px 25px 15px ;
+$color: rgb(254, 236, 239);
+$margin_I: 25px 0px 25px 15px;
 
-@mixin _flex($justify,$align) {
+@mixin _flex($justify, $align) {
   display: flex;
   justify-content: $justify;
   align-items: $align;
@@ -12,7 +12,7 @@ $margin_I: 25px 0px 25px 15px ;
 
 
 /* el-image样式 */
-@mixin _imgslot($width,$height,$size) {
+@mixin _imgslot($width, $height, $size) {
   display: flex;
   justify-content: center;
   min-width: $width;
@@ -21,7 +21,39 @@ $margin_I: 25px 0px 25px 15px ;
   background: var(--el-fill-color-light);
   color: var(--el-text-color-secondary);
   font-size: $size;
-  
+
 }
+
 /* el-image样式 */
 
+.flex-layout {
+  display: flex;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flex-shrink {
+  flex-shrink: 0;
+}
