--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,10 +4,18 @@
 }
 
 /* 子模块的盒子全部用这个样式 */
+
+
 .container {
     width: 1240px;
     height: auto;
     margin: 0 auto;
+}
+
+/* flex 简写 */
+
+.flex-layout {
+    display: flex;
 }
 
 .flex-center {
@@ -31,6 +39,12 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+.flex-between {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .flex-row {
