add: loading、empty component

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -127,3 +127,20 @@ body {
 ::-webkit-scrollbar-corner 边角
 
 ::-webkit-resizer 定义右下角拖动块的样式 */
+
+/*el-loading style*/
+.el-loading-mask {
+    background-color: #ffffff;
+}
+
+.el-loading-spinner .path {
+    stroke: #4a4a4a;
+}
+
+.el-loading-spinner .el-loading-text {
+    color: #4a4a4a;
+}
+
+.el-dropdown-menu__item .el-icon-user {
+    margin-right: 2px;
+}
